src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Scope_of_Services__c</fullName>
        <label>Scope of Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual physical exams</fullName>
                </value>
                <value>
                    <fullName>Annual Well-Woman Exams</fullName>
                </value>
                <value>
                    <fullName>Travel medicine</fullName>
                </value>
                <value>
                    <fullName>Management of chronic diseases</fullName>
                </value>
                <value>
                    <fullName>Cancer screening</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Fitness Testing</fullName>
                </value>
                <value>
                    <fullName>EKG/Spirometry/Nebulizers</fullName>
                </value>
                <value>
                    <fullName>Injections</fullName>
                </value>
                <value>
                    <fullName>CLIA-waived testing</fullName>
                </value>
                <value>
                    <fullName>Blood draw</fullName>
                </value>
                <value>
                    <fullName>Vision/Hearing Screening</fullName>
                </value>
                <value>
                    <fullName>Vaccinations</fullName>
                </value>
                <value>
                    <fullName>Seasonal Allergies</fullName>
                </value>
                <value>
                    <fullName>Management of minor injuries</fullName>
                </value>
                <value>
                    <fullName>Repair of simple wounds</fullName>
                </value>
                <value>
                    <fullName>Performance of common procedures</fullName>
                </value>
                <value>
                    <fullName>Acute diseases</fullName>
                </value>
                <value>
                    <fullName>Management of urgent situations</fullName>
                </value>
                <value>
                    <fullName>24/7/365 on call provider coverage</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Massage</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Optometry</fullName>
                </value>
                <value>
                    <fullName>Optometry Dispensing</fullName>
                </value>
                <value>
                    <fullName>Dietitian</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Allergy Desensitization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Copy__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <description>Used to determine if a the Stage value has changed. If it has then we need to update the &quot;Days In &lt;Stage Name&gt;&quot; field. At the end of those workflows, this field will be updated to match the current Stage value.</description>
        <label>Stage Copy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>UT</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Latest_Forecast__c</fullName>
        <label>Total Latest Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Schedule_Revenue__c</fullName>
        <label>Total Schedule Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trending_Status__c</fullName>
        <description>This is a field to indicate if the opportunity is progressing and has a lot of momentum and activity, or neutral, or slowing down and going backwards.</description>
        <inlineHelpText>Pick the appropriate trending status from the pick list to describe the trending status for this opportunity.</inlineHelpText>
        <label>Trending Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trending_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Types_of_Providers__c</fullName>
        <label>Types of Providers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Host</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Registered Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Exercise Physiologist</fullName>
                </value>
                <value>
                    <fullName>Phlebotomist</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Coach</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy Assistant</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Acupuncturist</fullName>
                </value>
                <value>
                    <fullName>Optometrist</fullName>
                </value>
                <value>
                    <fullName>Optometry Assistant</fullName>
                </value>
                <value>
                    <fullName>Registered Dietitian</fullName>
                </value>
                <value>
                    <fullName>Massage Therapist</fullName>
                </value>
                <value>
                    <fullName>IT support</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>OSHA/HIPAA compliance staff</fullName>
                </value>
                <value>
                    <fullName>Licensed Clinical Social Worker</fullName>
                </value>
                <value>
                    <fullName>Licensed Family &amp; Marriage Counselor</fullName>
                </value>
                <value>
                    <fullName>Doctor of Osteopathy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WasLead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for reporting. Mapped from the Lead to make this box TRUE.</inlineHelpText>
        <label>WasLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_XO_able_to_engage_decision_makers__c</fullName>
        <inlineHelpText>Please indicate if XO was able to engage with key decision makers on this opportunity by picking Yes or No from the picklist..</inlineHelpText>
        <label>Was XO able to engage decision makers?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_there_a_debrief_call__c</fullName>
        <inlineHelpText>Indicate if there was a debrief call by picking Yes or No from the picklist.</inlineHelpText>
        <label>Was there a debrief call?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Number_of_Lives__c</fullName>
        <inlineHelpText>The Sum of all Associated Accounts &quot;Weighted Number of Lives&quot;</inlineHelpText>
        <label>Weighted Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_could_XO_have_done_differently__c</fullName>
        <inlineHelpText>Please indicate what Crossover could have done differently to change the outcome.</inlineHelpText>
        <label>What could XO have done differently?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_did_XO_do_right__c</fullName>
        <inlineHelpText>Please describe what XO did right on this opportunity.</inlineHelpText>
        <label>What did XO do right?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_lessons_were_learned__c</fullName>
        <inlineHelpText>Please describe any lessons learned on this opportunity.</inlineHelpText>
        <label>What lessons were learned?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_stage_did_we_get_to__c</fullName>
        <inlineHelpText>Pick the highest stage the opportunity reached prior to being Closed Lost.</inlineHelpText>
        <label>What stage did we get to?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_tactics_strategies_didn_t_work__c</fullName>
        <inlineHelpText>Please describe what tactics or strategies were not successful with this opportunity.</inlineHelpText>
        <label>What tactics/strategies didn&apos;t work?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__MarketoAnalyzer__c</fullName>
        <description>This creates a link to the Marketo Opportunity Influence Analyzer. This feature requires an active subscription to Marketo Revenue Cycle Analytics.</description>
        <formula>HYPERLINK (&quot;/apex/mkto_si__MarketoRedirect?actionName=salesInsightAnalytics&amp;reportType=AccountAnalyzer&amp;objType=Opportunity&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__marketo_logo_16, $Label.mkto_si__marketo_opportunity_analysis))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Opportunity Analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Opportunity_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zcrm_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>zcrm_Opportunity_Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AM_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Vega</value>
        </filters>
        <label>AM Opps Sarah Vega</label>
    </listViews>
    <listViews>
        <fullName>AM_Opps_Becky_Beatte</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Murray</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Amazon</value>
        </filters>
        <label>AM Opps Becky Beatte</label>
    </listViews>
    <listViews>
        <fullName>AM_Opps_Erin_Storch</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Storch</value>
        </filters>
        <label>AM Opps Erin Storch</label>
    </listViews>
    <listViews>
        <fullName>AM_Opps_Jocylyn_Corpuz</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Corpuz</value>
        </filters>
        <label>AM Opps Jocylyn Corpuz</label>
    </listViews>
    <listViews>
        <fullName>AM_Opps_Lydia_Valdez</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2020</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Valdez</value>
        </filters>
        <label>AM Opps Lydia Valdez</label>
    </listViews>
    <listViews>
        <fullName>AM_Opps_Lynnsy</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Spivey</value>
        </filters>
        <label>AM Opps Lynnsy Spivey</label>
    </listViews>
    <listViews>
        <fullName>All_Near_Site</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Revenue_Type__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Committed_Lives__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Weighted_Number_of_Lives__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Products__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>DOFTE</value>
        </filters>
        <label>All Near-Site</label>
    </listViews>
    <listViews>
        <fullName>All_On_Site</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Original_NS_Opportunity__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Committed_Lives__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Weighted_Number_of_Lives__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Opportunity.All_Products,Opportunity.Near_Site</value>
        </filters>
        <label>All On-Site</label>
    </listViews>
    <listViews>
        <fullName>All_On_Site_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Committed_Lives__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Weighted_Number_of_Lives__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.On_Site</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All On-Site Open</label>
    </listViews>
    <listViews>
        <fullName>Blank_Opportunity_Record_Type</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Blank Opportunity Record Type</label>
    </listViews>
    <listViews>
        <fullName>Closed_Lost_Deletion_Candidates_NS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Delete__c</columns>
        <columns>Loss_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>Closed_Lost_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Near_Site</value>
        </filters>
        <filters>
            <field>Loss_Reason__c</field>
            <operation>equals</operation>
            <value>Other - Data Cleanup</value>
        </filters>
        <label>Closed Lost Deletion Candidates (NS)</label>
    </listViews>
    <listViews>
        <fullName>Closed_Lost_Deletion_Candidates_OS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Delete__c</columns>
        <columns>Loss_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>Closed_Lost_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.On_Site</value>
        </filters>
        <filters>
            <field>Loss_Reason__c</field>
            <operation>equals</operation>
            <value>Other - Data Cleanup</value>
        </filters>
        <label>Closed Lost Deletion Candidates (OS)</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Employer_Sales_Active_Pipeline</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>External__c</columns>
        <columns>Number_of_Eligible_Employees__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Product Introduction,Negotiation,Contracting</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2023</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Bake,bowe,etma</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/1/2020 12:00 AM</value>
        </filters>
        <label>Employer Sales Active Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Employer_Sales_Big_Bets_Pipeline</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>External__c</columns>
        <columns>Number_of_Eligible_Employees__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Clinic_Launch_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Discovery,Product Introduction</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Bake,bowe</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>11/1/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>1000000</value>
        </filters>
        <label>Employer Sales Big Bets Pipeline</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Management</fullName>
        <active>true</active>
        <businessProcess>XO Account Management</businessProcess>
        <label>Account Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>All_Products</fullName>
        <active>true</active>
        <businessProcess>XO Sales</businessProcess>
        <description>Use this record type for all products after the architecture change to products</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Near_Site</fullName>
        <active>false</active>
        <businessProcess>XO Sales</businessProcess>
        <label>Near-Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Site</fullName>
        <active>false</active>
        <businessProcess>XO Sales</businessProcess>
        <label>On-Site</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>